@@ -35,15 +35,12 @@
 
 package java.util.concurrent;
 
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.VarHandle;
 import java.util.AbstractQueue;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.Iterator;
 import java.util.NoSuchElementException;
-import java.util.Objects;
 import java.util.PriorityQueue;
 import java.util.Queue;
 import java.util.SortedSet;
@@ -51,8 +48,10 @@ import java.util.Spliterator;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
-import java.util.function.Predicate;
-import jdk.internal.misc.SharedSecrets;
+
+// BEGIN android-note
+// removed link to collections framework docs
+// END android-note
 
 /**
  * An unbounded {@linkplain BlockingQueue blocking queue} that uses
@@ -65,15 +64,15 @@ import jdk.internal.misc.SharedSecrets;
  * non-comparable objects (doing so results in
  * {@code ClassCastException}).
  *
- * <p>This class and its iterator implement all of the <em>optional</em>
- * methods of the {@link Collection} and {@link Iterator} interfaces.
- * The Iterator provided in method {@link #iterator()} and the
- * Spliterator provided in method {@link #spliterator()} are <em>not</em>
- * guaranteed to traverse the elements of the PriorityBlockingQueue in
- * any particular order. If you need ordered traversal, consider using
- * {@code Arrays.sort(pq.toArray())}.  Also, method {@code drainTo} can
- * be used to <em>remove</em> some or all elements in priority order and
- * place them in another collection.
+ * <p>This class and its iterator implement all of the
+ * <em>optional</em> methods of the {@link Collection} and {@link
+ * Iterator} interfaces.  The Iterator provided in method {@link
+ * #iterator()} is <em>not</em> guaranteed to traverse the elements of
+ * the PriorityBlockingQueue in any particular order. If you need
+ * ordered traversal, consider using
+ * {@code Arrays.sort(pq.toArray())}.  Also, method {@code drainTo}
+ * can be used to <em>remove</em> some or all elements in priority
+ * order and place them in another collection.
  *
  * <p>Operations on this class make no guarantees about the ordering
  * of elements with equal priority. If you need to enforce an
@@ -101,10 +100,6 @@ import jdk.internal.misc.SharedSecrets;
  *     return res;
  *   }
  * }}</pre>
- *
- * <p>This class is a member of the
- * <a href="{@docRoot}/java.base/java/util/package-summary.html#CollectionsFramework">
- * Java Collections Framework</a>.
  *
  * @since 1.5
  * @author Doug Lea
@@ -168,12 +163,12 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
     /**
      * Lock used for all public operations.
      */
-    private final ReentrantLock lock = new ReentrantLock();
+    private final ReentrantLock lock;
 
     /**
      * Condition for blocking when empty.
      */
-    private final Condition notEmpty = lock.newCondition();
+    private final Condition notEmpty;
 
     /**
      * Spinlock for allocation, acquired via CAS.
@@ -225,8 +220,10 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
                                  Comparator<? super E> comparator) {
         if (initialCapacity < 1)
             throw new IllegalArgumentException();
+        this.lock = new ReentrantLock();
+        this.notEmpty = lock.newCondition();
         this.comparator = comparator;
-        this.queue = new Object[Math.max(1, initialCapacity)];
+        this.queue = new Object[initialCapacity];
     }
 
     /**
@@ -246,6 +243,8 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      *         of its elements are null
      */
     public PriorityBlockingQueue(Collection<? extends E> c) {
+        this.lock = new ReentrantLock();
+        this.notEmpty = lock.newCondition();
         boolean heapify = true; // true if not known to be in heap order
         boolean screen = true;  // true if must screen for nulls
         if (c instanceof SortedSet<?>) {
@@ -261,25 +260,20 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
             if (pq.getClass() == PriorityBlockingQueue.class) // exact match
                 heapify = false;
         }
-        Object[] es = c.toArray();
-        int n = es.length;
+        Object[] a = c.toArray();
+        int n = a.length;
         // If c.toArray incorrectly doesn't return Object[], copy it.
-        if (es.getClass() != Object[].class)
-            es = Arrays.copyOf(es, n, Object[].class);
+        if (a.getClass() != Object[].class)
+            a = Arrays.copyOf(a, n, Object[].class);
         if (screen && (n == 1 || this.comparator != null)) {
-            for (Object e : es)
-                if (e == null)
+            for (int i = 0; i < n; ++i)
+                if (a[i] == null)
                     throw new NullPointerException();
         }
-        this.queue = ensureNonEmpty(es);
+        this.queue = a;
         this.size = n;
         if (heapify)
             heapify();
-    }
-
-    /** Ensures that queue[0] exists, helping peek() and poll(). */
-    private static Object[] ensureNonEmpty(Object[] es) {
-        return (es.length > 0) ? es : new Object[1];
     }
 
     /**
@@ -295,7 +289,7 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         lock.unlock(); // must release and then re-acquire main lock
         Object[] newArray = null;
         if (allocationSpinLock == 0 &&
-            ALLOCATIONSPINLOCK.compareAndSet(this, 0, 1)) {
+            U.compareAndSwapInt(this, ALLOCATIONSPINLOCK, 0, 1)) {
             try {
                 int newCap = oldCap + ((oldCap < 64) ?
                                        (oldCap + 2) : // grow faster if small
@@ -325,23 +319,22 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      * Mechanics for poll().  Call only while holding lock.
      */
     private E dequeue() {
-        // assert lock.isHeldByCurrentThread();
-        final Object[] es;
-        final E result;
-
-        if ((result = (E) ((es = queue)[0])) != null) {
-            final int n;
-            final E x = (E) es[(n = --size)];
-            es[n] = null;
-            if (n > 0) {
-                final Comparator<? super E> cmp;
-                if ((cmp = comparator) == null)
-                    siftDownComparable(0, x, es, n);
-                else
-                    siftDownUsingComparator(0, x, es, n, cmp);
-            }
+        int n = size - 1;
+        if (n < 0)
+            return null;
+        else {
+            Object[] array = queue;
+            E result = (E) array[0];
+            E x = (E) array[n];
+            array[n] = null;
+            Comparator<? super E> cmp = comparator;
+            if (cmp == null)
+                siftDownComparable(0, x, array, n);
+            else
+                siftDownUsingComparator(0, x, array, n, cmp);
+            size = n;
+            return result;
         }
-        return result;
     }
 
     /**
@@ -349,38 +342,40 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      * promoting x up the tree until it is greater than or equal to
      * its parent, or is the root.
      *
-     * To simplify and speed up coercions and comparisons, the
+     * To simplify and speed up coercions and comparisons. the
      * Comparable and Comparator versions are separated into different
      * methods that are otherwise identical. (Similarly for siftDown.)
+     * These methods are static, with heap state as arguments, to
+     * simplify use in light of possible comparator exceptions.
      *
      * @param k the position to fill
      * @param x the item to insert
-     * @param es the heap array
+     * @param array the heap array
      */
-    private static <T> void siftUpComparable(int k, T x, Object[] es) {
+    private static <T> void siftUpComparable(int k, T x, Object[] array) {
         Comparable<? super T> key = (Comparable<? super T>) x;
         while (k > 0) {
             int parent = (k - 1) >>> 1;
-            Object e = es[parent];
+            Object e = array[parent];
             if (key.compareTo((T) e) >= 0)
                 break;
-            es[k] = e;
+            array[k] = e;
             k = parent;
         }
-        es[k] = key;
+        array[k] = key;
     }
 
-    private static <T> void siftUpUsingComparator(
-        int k, T x, Object[] es, Comparator<? super T> cmp) {
+    private static <T> void siftUpUsingComparator(int k, T x, Object[] array,
+                                       Comparator<? super T> cmp) {
         while (k > 0) {
             int parent = (k - 1) >>> 1;
-            Object e = es[parent];
+            Object e = array[parent];
             if (cmp.compare(x, (T) e) >= 0)
                 break;
-            es[k] = e;
+            array[k] = e;
             k = parent;
         }
-        es[k] = x;
+        array[k] = x;
     }
 
     /**
@@ -390,61 +385,67 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      *
      * @param k the position to fill
      * @param x the item to insert
-     * @param es the heap array
+     * @param array the heap array
      * @param n heap size
      */
-    private static <T> void siftDownComparable(int k, T x, Object[] es, int n) {
-        // assert n > 0;
-        Comparable<? super T> key = (Comparable<? super T>)x;
-        int half = n >>> 1;           // loop while a non-leaf
-        while (k < half) {
-            int child = (k << 1) + 1; // assume left child is least
-            Object c = es[child];
-            int right = child + 1;
-            if (right < n &&
-                ((Comparable<? super T>) c).compareTo((T) es[right]) > 0)
-                c = es[child = right];
-            if (key.compareTo((T) c) <= 0)
-                break;
-            es[k] = c;
-            k = child;
+    private static <T> void siftDownComparable(int k, T x, Object[] array,
+                                               int n) {
+        if (n > 0) {
+            Comparable<? super T> key = (Comparable<? super T>)x;
+            int half = n >>> 1;           // loop while a non-leaf
+            while (k < half) {
+                int child = (k << 1) + 1; // assume left child is least
+                Object c = array[child];
+                int right = child + 1;
+                if (right < n &&
+                    ((Comparable<? super T>) c).compareTo((T) array[right]) > 0)
+                    c = array[child = right];
+                if (key.compareTo((T) c) <= 0)
+                    break;
+                array[k] = c;
+                k = child;
+            }
+            array[k] = key;
         }
-        es[k] = key;
     }
 
-    private static <T> void siftDownUsingComparator(
-        int k, T x, Object[] es, int n, Comparator<? super T> cmp) {
-        // assert n > 0;
-        int half = n >>> 1;
-        while (k < half) {
-            int child = (k << 1) + 1;
-            Object c = es[child];
-            int right = child + 1;
-            if (right < n && cmp.compare((T) c, (T) es[right]) > 0)
-                c = es[child = right];
-            if (cmp.compare(x, (T) c) <= 0)
-                break;
-            es[k] = c;
-            k = child;
+    private static <T> void siftDownUsingComparator(int k, T x, Object[] array,
+                                                    int n,
+                                                    Comparator<? super T> cmp) {
+        if (n > 0) {
+            int half = n >>> 1;
+            while (k < half) {
+                int child = (k << 1) + 1;
+                Object c = array[child];
+                int right = child + 1;
+                if (right < n && cmp.compare((T) c, (T) array[right]) > 0)
+                    c = array[child = right];
+                if (cmp.compare(x, (T) c) <= 0)
+                    break;
+                array[k] = c;
+                k = child;
+            }
+            array[k] = x;
         }
-        es[k] = x;
     }
 
     /**
      * Establishes the heap invariant (described above) in the entire tree,
      * assuming nothing about the order of the elements prior to the call.
-     * This classic algorithm due to Floyd (1964) is known to be O(size).
      */
     private void heapify() {
-        final Object[] es = queue;
-        int n = size, i = (n >>> 1) - 1;
-        final Comparator<? super E> cmp;
-        if ((cmp = comparator) == null)
-            for (; i >= 0; i--)
-                siftDownComparable(i, (E) es[i], es, n);
-        else
-            for (; i >= 0; i--)
-                siftDownUsingComparator(i, (E) es[i], es, n, cmp);
+        Object[] array = queue;
+        int n = size;
+        int half = (n >>> 1) - 1;
+        Comparator<? super E> cmp = comparator;
+        if (cmp == null) {
+            for (int i = half; i >= 0; i--)
+                siftDownComparable(i, (E) array[i], array, n);
+        }
+        else {
+            for (int i = half; i >= 0; i--)
+                siftDownUsingComparator(i, (E) array[i], array, n, cmp);
+        }
     }
 
     /**
@@ -478,15 +479,15 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         final ReentrantLock lock = this.lock;
         lock.lock();
         int n, cap;
-        Object[] es;
-        while ((n = size) >= (cap = (es = queue).length))
-            tryGrow(es, cap);
+        Object[] array;
+        while ((n = size) >= (cap = (array = queue).length))
+            tryGrow(array, cap);
         try {
-            final Comparator<? super E> cmp;
-            if ((cmp = comparator) == null)
-                siftUpComparable(n, e, es);
+            Comparator<? super E> cmp = comparator;
+            if (cmp == null)
+                siftUpComparable(n, e, array);
             else
-                siftUpUsingComparator(n, e, es, cmp);
+                siftUpUsingComparator(n, e, array, cmp);
             size = n + 1;
             notEmpty.signal();
         } finally {
@@ -569,7 +570,7 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         final ReentrantLock lock = this.lock;
         lock.lock();
         try {
-            return (E) queue[0];
+            return (size == 0) ? null : (E) queue[0];
         } finally {
             lock.unlock();
         }
@@ -609,9 +610,10 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
 
     private int indexOf(Object o) {
         if (o != null) {
-            final Object[] es = queue;
-            for (int i = 0, n = size; i < n; i++)
-                if (o.equals(es[i]))
+            Object[] array = queue;
+            int n = size;
+            for (int i = 0; i < n; i++)
+                if (o.equals(array[i]))
                     return i;
         }
         return -1;
@@ -621,23 +623,23 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      * Removes the ith element from queue.
      */
     private void removeAt(int i) {
-        final Object[] es = queue;
-        final int n = size - 1;
+        Object[] array = queue;
+        int n = size - 1;
         if (n == i) // removed last element
-            es[i] = null;
+            array[i] = null;
         else {
-            E moved = (E) es[n];
-            es[n] = null;
-            final Comparator<? super E> cmp;
-            if ((cmp = comparator) == null)
-                siftDownComparable(i, moved, es, n);
+            E moved = (E) array[n];
+            array[n] = null;
+            Comparator<? super E> cmp = comparator;
+            if (cmp == null)
+                siftDownComparable(i, moved, array, n);
             else
-                siftDownUsingComparator(i, moved, es, n, cmp);
-            if (es[i] == moved) {
+                siftDownUsingComparator(i, moved, array, n, cmp);
+            if (array[i] == moved) {
                 if (cmp == null)
-                    siftUpComparable(i, moved, es);
+                    siftUpComparable(i, moved, array);
                 else
-                    siftUpUsingComparator(i, moved, es, cmp);
+                    siftUpUsingComparator(i, moved, array, cmp);
             }
         }
         size = n;
@@ -670,16 +672,14 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
 
     /**
      * Identity-based version for use in Itr.remove.
-     *
-     * @param o element to be removed from this queue, if present
      */
-    void removeEq(Object o) {
+    void removeEQ(Object o) {
         final ReentrantLock lock = this.lock;
         lock.lock();
         try {
-            final Object[] es = queue;
+            Object[] array = queue;
             for (int i = 0, n = size; i < n; i++) {
-                if (o == es[i]) {
+                if (o == array[i]) {
                     removeAt(i);
                     break;
                 }
@@ -728,7 +728,8 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      * @throws IllegalArgumentException      {@inheritDoc}
      */
     public int drainTo(Collection<? super E> c, int maxElements) {
-        Objects.requireNonNull(c);
+        if (c == null)
+            throw new NullPointerException();
         if (c == this)
             throw new IllegalArgumentException();
         if (maxElements <= 0)
@@ -755,10 +756,11 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         final ReentrantLock lock = this.lock;
         lock.lock();
         try {
-            final Object[] es = queue;
-            for (int i = 0, n = size; i < n; i++)
-                es[i] = null;
+            Object[] array = queue;
+            int n = size;
             size = 0;
+            for (int i = 0; i < n; i++)
+                array[i] = null;
         } finally {
             lock.unlock();
         }
@@ -859,9 +861,10 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
     final class Itr implements Iterator<E> {
         final Object[] array; // Array of all elements
         int cursor;           // index of next element to return
-        int lastRet = -1;     // index of last element, or -1 if no such
+        int lastRet;          // index of last element, or -1 if no such
 
         Itr(Object[] array) {
+            lastRet = -1;
             this.array = array;
         }
 
@@ -872,27 +875,15 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         public E next() {
             if (cursor >= array.length)
                 throw new NoSuchElementException();
-            return (E)array[lastRet = cursor++];
+            lastRet = cursor;
+            return (E)array[cursor++];
         }
 
         public void remove() {
             if (lastRet < 0)
                 throw new IllegalStateException();
-            removeEq(array[lastRet]);
+            removeEQ(array[lastRet]);
             lastRet = -1;
-        }
-
-        public void forEachRemaining(Consumer<? super E> action) {
-            Objects.requireNonNull(action);
-            final Object[] es = array;
-            int i;
-            if ((i = cursor) < es.length) {
-                lastRet = -1;
-                cursor = es.length;
-                for (; i < es.length; i++)
-                    action.accept((E) es[i]);
-                lastRet = es.length - 1;
-            }
         }
     }
 
@@ -931,9 +922,7 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         throws java.io.IOException, ClassNotFoundException {
         try {
             s.defaultReadObject();
-            int sz = q.size();
-            SharedSecrets.getJavaObjectInputStreamAccess().checkArray(s, Object[].class, sz);
-            this.queue = new Object[Math.max(1, sz)];
+            this.queue = new Object[q.size()];
             comparator = q.comparator();
             addAll(q);
         } finally {
@@ -941,65 +930,68 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
         }
     }
 
-    /**
-     * Immutable snapshot spliterator that binds to elements "late".
-     */
-    final class PBQSpliterator implements Spliterator<E> {
-        Object[] array;        // null until late-bound-initialized
+    // Similar to Collections.ArraySnapshotSpliterator but avoids
+    // commitment to toArray until needed
+    static final class PBQSpliterator<E> implements Spliterator<E> {
+        final PriorityBlockingQueue<E> queue;
+        Object[] array;
         int index;
         int fence;
 
-        PBQSpliterator() {}
-
-        PBQSpliterator(Object[] array, int index, int fence) {
+        PBQSpliterator(PriorityBlockingQueue<E> queue, Object[] array,
+                       int index, int fence) {
+            this.queue = queue;
             this.array = array;
             this.index = index;
             this.fence = fence;
         }
 
-        private int getFence() {
-            if (array == null)
-                fence = (array = toArray()).length;
-            return fence;
+        final int getFence() {
+            int hi;
+            if ((hi = fence) < 0)
+                hi = fence = (array = queue.toArray()).length;
+            return hi;
         }
 
-        public PBQSpliterator trySplit() {
+        public PBQSpliterator<E> trySplit() {
             int hi = getFence(), lo = index, mid = (lo + hi) >>> 1;
             return (lo >= mid) ? null :
-                new PBQSpliterator(array, lo, index = mid);
+                new PBQSpliterator<E>(queue, array, lo, index = mid);
         }
 
+        @SuppressWarnings("unchecked")
         public void forEachRemaining(Consumer<? super E> action) {
-            Objects.requireNonNull(action);
-            final int hi = getFence(), lo = index;
-            final Object[] es = array;
-            index = hi;                 // ensure exhaustion
-            for (int i = lo; i < hi; i++)
-                action.accept((E) es[i]);
+            Object[] a; int i, hi; // hoist accesses and checks from loop
+            if (action == null)
+                throw new NullPointerException();
+            if ((a = array) == null)
+                fence = (a = queue.toArray()).length;
+            if ((hi = fence) <= a.length &&
+                (i = index) >= 0 && i < (index = hi)) {
+                do { action.accept((E)a[i]); } while (++i < hi);
+            }
         }
 
         public boolean tryAdvance(Consumer<? super E> action) {
-            Objects.requireNonNull(action);
+            if (action == null)
+                throw new NullPointerException();
             if (getFence() > index && index >= 0) {
-                action.accept((E) array[index++]);
+                @SuppressWarnings("unchecked") E e = (E) array[index++];
+                action.accept(e);
                 return true;
             }
             return false;
         }
 
-        public long estimateSize() { return getFence() - index; }
+        public long estimateSize() { return (long)(getFence() - index); }
 
         public int characteristics() {
-            return (Spliterator.NONNULL |
-                    Spliterator.SIZED |
-                    Spliterator.SUBSIZED);
+            return Spliterator.NONNULL | Spliterator.SIZED | Spliterator.SUBSIZED;
         }
     }
 
     /**
      * Returns a {@link Spliterator} over the elements in this queue.
-     * The spliterator does not traverse elements in any particular order
-     * (the {@link Spliterator#ORDERED ORDERED} characteristic is not reported).
      *
      * <p>The returned spliterator is
      * <a href="package-summary.html#Weakly"><i>weakly consistent</i></a>.
@@ -1014,106 +1006,18 @@ public class PriorityBlockingQueue<E> extends AbstractQueue<E>
      * @since 1.8
      */
     public Spliterator<E> spliterator() {
-        return new PBQSpliterator();
+        return new PBQSpliterator<E>(this, null, 0, -1);
     }
 
-    /**
-     * @throws NullPointerException {@inheritDoc}
-     */
-    public boolean removeIf(Predicate<? super E> filter) {
-        Objects.requireNonNull(filter);
-        return bulkRemove(filter);
-    }
-
-    /**
-     * @throws NullPointerException {@inheritDoc}
-     */
-    public boolean removeAll(Collection<?> c) {
-        Objects.requireNonNull(c);
-        return bulkRemove(e -> c.contains(e));
-    }
-
-    /**
-     * @throws NullPointerException {@inheritDoc}
-     */
-    public boolean retainAll(Collection<?> c) {
-        Objects.requireNonNull(c);
-        return bulkRemove(e -> !c.contains(e));
-    }
-
-    // A tiny bit set implementation
-
-    private static long[] nBits(int n) {
-        return new long[((n - 1) >> 6) + 1];
-    }
-    private static void setBit(long[] bits, int i) {
-        bits[i >> 6] |= 1L << i;
-    }
-    private static boolean isClear(long[] bits, int i) {
-        return (bits[i >> 6] & (1L << i)) == 0;
-    }
-
-    /** Implementation of bulk remove methods. */
-    private boolean bulkRemove(Predicate<? super E> filter) {
-        final ReentrantLock lock = this.lock;
-        lock.lock();
-        try {
-            final Object[] es = queue;
-            final int end = size;
-            int i;
-            // Optimize for initial run of survivors
-            for (i = 0; i < end && !filter.test((E) es[i]); i++)
-                ;
-            if (i >= end)
-                return false;
-            // Tolerate predicates that reentrantly access the
-            // collection for read, so traverse once to find elements
-            // to delete, a second pass to physically expunge.
-            final int beg = i;
-            final long[] deathRow = nBits(end - beg);
-            deathRow[0] = 1L;   // set bit 0
-            for (i = beg + 1; i < end; i++)
-                if (filter.test((E) es[i]))
-                    setBit(deathRow, i - beg);
-            int w = beg;
-            for (i = beg; i < end; i++)
-                if (isClear(deathRow, i - beg))
-                    es[w++] = es[i];
-            for (i = size = w; i < end; i++)
-                es[i] = null;
-            heapify();
-            return true;
-        } finally {
-            lock.unlock();
-        }
-    }
-
-    /**
-     * @throws NullPointerException {@inheritDoc}
-     */
-    public void forEach(Consumer<? super E> action) {
-        Objects.requireNonNull(action);
-        final ReentrantLock lock = this.lock;
-        lock.lock();
-        try {
-            final Object[] es = queue;
-            for (int i = 0, n = size; i < n; i++)
-                action.accept((E) es[i]);
-        } finally {
-            lock.unlock();
-        }
-    }
-
-    // VarHandle mechanics
-    private static final VarHandle ALLOCATIONSPINLOCK;
+    // Unsafe mechanics
+    private static final sun.misc.Unsafe U = sun.misc.Unsafe.getUnsafe();
+    private static final long ALLOCATIONSPINLOCK;
     static {
         try {
-            MethodHandles.Lookup l = MethodHandles.lookup();
-            ALLOCATIONSPINLOCK = l.findVarHandle(PriorityBlockingQueue.class,
-                                                 "allocationSpinLock",
-                                                 int.class);
+            ALLOCATIONSPINLOCK = U.objectFieldOffset
+                (PriorityBlockingQueue.class.getDeclaredField("allocationSpinLock"));
         } catch (ReflectiveOperationException e) {
-            throw new ExceptionInInitializerError(e);
+            throw new Error(e);
         }
     }
 }
